--- a/liyua.cls
+++ b/liyua.cls
@@ -1,9 +1,9 @@
 \ProvidesClass{liyua}[Liyua's super cool template]
 \NeedsTeXFormat{LaTeX2e}
 
-\RequirePackage{liyua-colors}
-\RequirePackage{liyua-maths}
-
 \LoadClass{article}
 
+\RequirePackage{liyua-colors}
+\RequirePackage{liyua-maths}
+\RequirePackage{liyua-boxes}
 
