--- a/liyua-colors.sty
+++ b/liyua-colors.sty
@@ -7,14 +7,14 @@
 \definecolor{text}{HTML}{000000}
 \definecolor{code}{HTML}{444444}
 
-\definecolor{primary-dark}{HTML}{487782}
-\definecolor{primary-light}{HTML}{9E429C}
-\definecolor{secondary-dark}{HTML}{2A92BE}
-\definecolor{secondary-light}{HTML}{9B7CB5}
-\definecolor{tertiary-dark}{HTML}{448594}
-\definecolor{tertiary-light}{HTML}{C045BC}
-\definecolor{quarternary-dark}{HTML}{38C2FE}
-\definecolor{quarternary-light}{HTML}{CEA6F1}
+\definecolor{Red}{HTML}{fc5c65}
+\definecolor{Orange}{HTML}{fd9644}
+\definecolor{Yellow}{HTML}{fed330}
+\definecolor{Green}{HTML}{26de81}
+\definecolor{Teal}{HTML}{2bcbba}
+\definecolor{LightBlue}{HTML}{45aaf2}
+\definecolor{Blue}{HTML}{4b7bec}
+\definecolor{Purple}{HTML}{a55eea}
 
 \pagecolor{page}
 \color{text}
@@ -25,15 +25,15 @@
 	\colorlet{marginInfoBulleBackground}{page}
 	\colorlet{marginInfoBulleText}{text}
 
-	\colorlet{criticalColor}{quarternary-dark}
-	\colorlet{questionColor}{quarternary-light}
-	\colorlet{informationColor}{tertiary-dark}
-	\colorlet{checkColor}{tertiary-light}
-	\colorlet{warningColor}{secondary-dark}
-	\colorlet{tipColor}{secondary-light}
-	\colorlet{exampleColor}{primary-dark}
-	\colorlet{mathematicalColor}{primary-light}
-	\colorlet{codeColor}{code}
+	\colorlet{criticalColor}{Red}
+	\colorlet{questionColor}{Purple}
+	\colorlet{informationColor}{Green}
+	\colorlet{checkColor}{Blue}
+	\colorlet{warningColor}{Orange}
+	\colorlet{tipColor}{Purple}
+	\colorlet{exampleColor}{Blue}
+	\colorlet{mathematicalColor}{Orange}
+	\colorlet{codeColor}{Teal}
 }
 
 \reloadBoxColours
