--- a/document.tex
+++ b/document.tex
@@ -1,13 +1,25 @@
 \documentclass{liyua}
 
-\usepackage{lipsum}
-
-
 \begin{document}
-
-$$3*5=15$$
-
-\begin{customenvironment}{Red}{Test Box}
-	Test
-\end{customenvironment}
+\begin{critical}
+	This is critical
+\end{critical}
+\begin{warning}
+	This is a warning
+\end{warning}
+\begin{examination}
+	This is an examination
+\end{examination}
+\begin{info}
+	This is an info
+\end{info}
+\begin{example}
+	This is an example
+\end{example}
+\begin{tip}
+	This is a tip
+\end{tip}
+\begin{question}
+	This is a question.
+\end{question}
 \end{document}
