Started work on headers and footers

--- a/document.tex
+++ b/document.tex
@@ -5,7 +5,7 @@
 	This is critical
 \end{critical}
 \begin{warning}
-	This is a warning
+	This is a warning.
 \end{warning}
 \begin{examination}
 	This is an examination
@@ -22,4 +22,5 @@
 \begin{question}
 	This is a question.
 \end{question}
+\textcolor{secondary}{secondary}
 \end{document}
