--- a/liyua-colors.sty
+++ b/liyua-colors.sty
@@ -16,24 +16,10 @@
 \definecolor{Blue}{HTML}{4b7bec}
 \definecolor{Purple}{HTML}{a55eea}
 
+\colorlet{primary}{Teal}
+\colorlet{secondary}{Teal!80!black}
+\colorlet{tertiary}{Teal!60!black}
+
 \pagecolor{page}
 \color{text}
 
-\newcommand{\reloadBoxColours}{
-	\colorlet{infoBulleBackground}{page!98!text}
-	\colorlet{infoBulleText}{text}
-	\colorlet{marginInfoBulleBackground}{page}
-	\colorlet{marginInfoBulleText}{text}
-
-	\colorlet{criticalColor}{Red}
-	\colorlet{questionColor}{Purple}
-	\colorlet{informationColor}{Green}
-	\colorlet{checkColor}{Blue}
-	\colorlet{warningColor}{Orange}
-	\colorlet{tipColor}{Purple}
-	\colorlet{exampleColor}{Blue}
-	\colorlet{mathematicalColor}{Orange}
-	\colorlet{codeColor}{Teal}
-}
-
-\reloadBoxColours
