Started work on page style

--- a/document.tex
+++ b/document.tex
@@ -1,6 +1,9 @@
 \documentclass{liyua}
 
+\usepackage{lipsum}
+
 \begin{document}
+\pagestyle{plain}
 \begin{critical}
 	This is critical
 \end{critical}
@@ -22,5 +25,6 @@
 \begin{question}
 	This is a question.
 \end{question}
-\textcolor{secondary}{secondary}
+\lipsum[1-10]
 \end{document}
+
