Got a working page style concept. Now I just need to actually make some page styles

--- a/document.tex
+++ b/document.tex
@@ -2,8 +2,9 @@
 
 \usepackage{lipsum}
 
+\title{Example}
 \begin{document}
-\pagestyle{plain}
+\maketitle
 \begin{critical}
 	This is critical
 \end{critical}
