Tinkering with page style

--- a/document.tex
+++ b/document.tex
@@ -3,8 +3,10 @@
 \usepackage{lipsum}
 
 \title{Example}
+
 \begin{document}
 \maketitle
+\tableofcontents
 \begin{critical}
 	This is critical
 \end{critical}
